--- a/src/features/userProfile/components/sizeBar/demo.scss
+++ b/src/features/userProfile/components/sizeBar/demo.scss
@@ -53,15 +53,14 @@ $animation-duration: 0.5s;
         height: 90px;
         border-radius: 50%;
         margin: 50px 0 25px 0;
-        // border-color: $border-color;
         transition: all $animation-duration;
-        // background: url("../../../../assets/images/avatar4.png");
         background-size: cover;
         img {
           width: 90px;
           border-radius: 50%;
-          // border: 6px solid rgba(255, 255, 255, 0.1);
           transition: all $animation-duration;
+          background-size: cover;
+          background-position: center;
         }
       }
 
@@ -82,7 +81,6 @@ $animation-duration: 0.5s;
     //   }
 
     .social-links {
-      
       flex-grow: 1;
       max-height: 50px;
       display: flex;
@@ -161,6 +159,5 @@ $animation-duration: 0.5s;
     width: 25px;
     height: 25px;
     transition: all $animation-duration / 2;
-  
   }
 }
