--- a/src/features/userProfile/components/sizeBar/demo.scss
+++ b/src/features/userProfile/components/sizeBar/demo.scss
@@ -14,6 +14,9 @@ $animation-duration: 0.5s;
   transition: all $animation-duration;
   background: #ffffff;
   box-shadow: 20px 0 30px rgba(109, 104, 57, 0.3);
+  @media only screen and (max-width: 570px) {
+    width: 100%;
+  }
 
   .inner {
     display: flex;
@@ -149,6 +152,9 @@ $animation-duration: 0.5s;
   transform: translate(0, -50%);
   box-shadow: 20px 0 20px rgba(109, 104, 57, 0.5);
   background: #ffffff;
+  @media only screen and (max-width: 570px) {
+    display: none;
+  }
   // z-index: 1;
 
   &.small {
