--- a/src/features/messenger/chatWindow/style.scss
+++ b/src/features/messenger/chatWindow/style.scss
@@ -8,7 +8,8 @@
 .header {
   transition: all 0.3s;
   &.changeBackground {
-    background: #ffc929;
+    background: #2F8C92;
+    color:#fff;
   };
 }
 
