--- a/src/features/userProfile/components/sizeBar/demo.scss
+++ b/src/features/userProfile/components/sizeBar/demo.scss
@@ -13,7 +13,7 @@ $animation-duration: 0.5s;
   position: relative;
   transition: all $animation-duration;
   background: #ffffff;
-  box-shadow: 20px 0 30px rgba(109, 104, 57, 0.3);
+  // box-shadow: 20px 0 30px rgba(109, 104, 57, 0.3);
   @media only screen and (max-width: 570px) {
     width: 100%;
   }
@@ -150,7 +150,7 @@ $animation-duration: 0.5s;
   border-radius: 0 50% 50% 0;
   cursor: pointer;
   transform: translate(0, -50%);
-  box-shadow: 20px 0 20px rgba(109, 104, 57, 0.5);
+  // box-shadow: 20px 0 20px rgba(109, 104, 57, 0.5);
   background: #ffffff;
   @media only screen and (max-width: 570px) {
     display: none;
